--- a/public/css/iconos.css
+++ b/public/css/iconos.css
@@ -1,5 +1,11 @@
+.icon-container{
+	height:64px;
+	width: 64px;
+	background-color: blue;
+	border-radius:50%;
+}
+
 .iconos{
 	color: white;
-	background-color: blue;
-	border-radius: 50%;
+	font-size:36px;
 }
