--- a/public/css/principal.css
+++ b/public/css/principal.css
@@ -39,3 +39,12 @@ hr
 	width:16%;
 	float:left;
 }
+
+ul
+{
+   background-color:#000088;
+   color: white;
+   list-style-type:none;
+   width:9%;
+   height:40px;
+}
